create github pages

--- a/stock-list.html
+++ b/stock-list.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="mbr-section article content1 cid-rN72LWv5oG" id="content1-s">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content1 cid-rN72LWv5oG" id="content1-s">
     
      
 
