create github pages

--- a/autosleeper-symbol.html
+++ b/autosleeper-symbol.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section article content1 cid-rNjgyt7CRu" id="content1-2i">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section article content1 cid-rNjgyt7CRu" id="content1-2i">
     
      
 
