--- a/about-us.html
+++ b/about-us.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section article content1 cid-rNu7qgoJ6e" id="content1-2t">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section article content1 cid-rNu7qgoJ6e" id="content1-2t">
     
      
 
@@ -137,9 +137,7 @@
                         </h4>
                     </div>
                     <div class="icon-contacts pb-3">
-                        <h5 class="align-left mbr-fonts-style display-7">
-                            Ready for offers and cooperation
-                        </h5>
+                        <h5 class="align-left mbr-fonts-style display-7"></h5>
                         <p class="mbr-text align-left mbr-fonts-style display-7"></p><p>
                             Phone: 01708 864239
 <a href="tel:01708 864239"></a> <br>
@@ -149,7 +147,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iR8yuDehbyJS+H423NlVnPNo+JaNvgRwNAlZANtX/nQodjt2N9UxrgynCWxYX8/wvFasWge8M4bc8Q0jmlSdzrwn72t1ZUtIlbHLpdFG1ZmyMQ5AG3MDCbuAUCkKNiN3">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6DOg03uFiL0fFzO4BUXJ/3W8MRkZ1ygSUhAtfme5iPp8CmtG71d3T/foWFVxZveLV1fM9BJmY41J558GQfvuWmKB3K6OZmSV+EKVpLGX+4njbPxXx2vYE43DzkrikEyd">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-2u">
