create github pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-rN1GQwdEw3 mbr-parallax-background" id="header1-1">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header1 cid-rN1GQwdEw3 mbr-parallax-background" id="header1-1">
 
     
 
