--- a/privacy.html
+++ b/privacy.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section article content1 cid-rNjsFiWV9g" id="content2-31">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section article content1 cid-rNjsFiWV9g" id="content2-31">
 
      
 
