create github pages

--- a/privacy.html
+++ b/privacy.html
@@ -24,12 +24,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<meta name="google-site-verification" content="DdxswWyOA_V6Z5ST9zRFJlzuCghxmODkYKJlc-njBLE" />
-<!-- /Google Analytics -->
-
-
   <section class="menu cid-rNe0WdKRnV" once="menu" id="menu1-2y">
 
     
@@ -67,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section article content1 cid-rNjsFiWV9g" id="content2-31">
+<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="mbr-section article content1 cid-rNjsFiWV9g" id="content2-31">
 
      
 
