--- a/index.html
+++ b/index.html
@@ -24,12 +24,6 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<meta name="google-site-verification" content="DdxswWyOA_V6Z5ST9zRFJlzuCghxmODkYKJlc-njBLE" />
-<!-- /Google Analytics -->
-
-
   <section class="menu cid-rN1FRy6EyL" once="menu" id="menu1-0">
 
     
@@ -67,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header1 cid-rN1GQwdEw3 mbr-parallax-background" id="header1-1">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="header1 cid-rN1GQwdEw3 mbr-parallax-background" id="header1-1">
 
     
 
